[package]
name = "nauta"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A map generation tool."
readme = "./README.md"
repository = "http://github.com/HectorMRC/nauta-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
